# doc_assistant

./: .dockerignore.md  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  GLOSSARY.md  LICENSE.txt  README.md  SESSION-baton-entry.md  chainlit.md  core.py  docker-compose.yml  justfile  pyproject.toml  requirements.txt
.claude/: CONTEXT.md  KNOWN_ISSUES.md  RIGOR_TODO.md
.github/workflows/: ci.yml
apps/: chainlit_app.py  cli.py
apps/api/: CLAUDE.md  __init__.py  __main__.py  main.py  models.py  services.py  sessions.py
apps/desktop/: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
data/: anzsrc-2020-for-20210429.ttl  anzsrc_2020_for.json  library.db
docs/: DEMO.md  DEVLOG.md  PLAN_2026-07-21_exploration-epistemics.md  PLAN_2026-07-23_concept-graph-taxonomy-epistemics.md  PLAN_pr-a-cpc-scaffolding.md  REVIEW_2026-07-19_scale-robustness.md  ROADMAP.md  architecture.md  chunking-sweep-rtx-resume.md  decisions.md  desktop-packaging.md  doc-assistant-roadmap.md  figures-and-tables.md  how-answers-work.md  library.bib  ui-checklist.md
docs/archive/: DEVLOG-archive-001.md  KNOWN_ISSUES-resolved-001.md  concept-graph-redesign.md  decisions-monolith.md  doc-assistant-roadmap.md  pr-m0-chat-controller.md  pr-m1-epistemics-markers.md  pr-m2-fastapi-boundary.md  pr-m3-tauri-frontend.md  pr-m4-sidecar-packaging.md  pr-m5-decommission-chainlit.md  remediation-plan-2026-07.md
docs/decisions/: ADR-000-template.md  ADR-001-adopt-cpc-standard.md  ADR-002-tauri-fastapi-desktop-shell.md  ADR-003-structlog-observability.md  ADR-004-gap-detection-layer.md  ADR-005-epistemics-markers-default-off.md  ADR-006-contrastive-keyword-termhood.md  ADR-007-cpc-gates-vendored-local-only.md  ADR-008-concept-skeleton-r5-decision-run.md  ADR-009-book-oriented-hierarchical-chunking.md  ADR-010-rag-sandbox-nonpersistent-overrides.md  ADR-011-desktop-provider-apikey-management.md  ADR-012-provenote-installer-identity.md  ADR-013-document-metadata-editing.md  ADR-014-document-safe-delete.md  ADR-015-tag-families-over-concept-vocabulary.md  ADR-017-concept-graph-ui-boundaries.md  ADR-018-graph-vocabulary-scope.md  ADR-019-concept-taxonomy-classification-layer.md  ADR-020-share-rigor-todo-via-git.md  ADR-021-adopt-cpc-big-project-layout.md  ADR-022-docs-system-rationalization.md  ADR-023-knowledge-subpackage.md  ADR-024-evals-results-folder.md  ADR-025-corpus-folders-retrieval-scope.md  ADR-026-rebuild-migrations.md  ADR-027-epistemics-surfacing-split.md  ADR-028-concept-taxonomy-polyhierarchy-skos.md
docs/features/: FEATURE-000-template.md
docs/specs/: SPEC-000-template.md  chunk-2a-dual-interpretation.md  concept-graph-redesign.md  feature-4a-marker-table-ingest.md  feature-4b-figure-detection.md  feature-7d-knowledge-currency.md  feature-ab-compare-sandbox.md  feature-app-shell-search-collapse.md  feature-concept-graph.md  feature-conversation-history.md  feature-conversation-management.md  feature-conversation-resume.md  feature-corpus-folders-demo.md  feature-corpus-folders-scope.md  feature-corpus-folders.md  feature-e0-correctness-batch.md  feature-e1-marker-join.md  feature-e2-source-evaluation-strip.md  feature-gap-detection.md  feature-keyword-filter-overlay.md  feature-library-browser.md  feature-library-redesign.md  feature-phase8-ui-upgrade.md  feature-provider-switch.md  feature-rag-sandbox.md  feature-selective-ingestion.md  feature-tag-families.md  feature-taxonomy-curation.md  feature-taxonomy-seed-schema.md  feature-taxonomy-view.md  feature-visual-identity.md  llm-provider-isolation.md  pr-m0-chat-controller.md  pr-m1-epistemics-markers.md  pr-m2-fastapi-boundary.md  pr-m3-tauri-frontend.md  pr-m4-sidecar-packaging.md  pr-m5-decommission-chainlit.md  remediation-plan-2026-07.md  structlog-observability.md  (+2 more)
docs/sprints/: SPRINT-000-template.md  SPRINT-001-retire-concept-graph.md  SPRINT-002-gap-layer-deterministic.md  SPRINT-003-year-aware-superseded.md  SPRINT-004-ki10-frozen-os-trust.md  SPRINT-005-gap-stochastic-ceiling.md  SPRINT-006-gate-superseded-confidence.md  SPRINT-007-fix-epistemics-label-attribution.md  SPRINT-008-chat-bubble-layout.md  SPRINT-009-citation-side-panel.md  SPRINT-010-settings-sandbox-theme.md  SPRINT-011-settings-niche-knobs.md  SPRINT-012-provider-switch.md  SPRINT-013-conversation-history.md  SPRINT-014-library-browser.md  SPRINT-015-ab-compare.md  SPRINT-016-visual-identity-v1.md  SPRINT-017-visual-identity-v2.md  SPRINT-018-visual-identity-v3a-rename.md  SPRINT-019-visual-identity-v3b-icon.md
evals/: README.md
scripts/: CLAUDE.md  audit_metadata.py  backfill_demo_folder.py  backfill_graph_include.py  backfill_health.py  build_concept_graph.py  build_concept_skeleton.py  build_gaps.py  build_parent_child_index.py  build_sidecar.py  build_wiki.py  cleanup_metadata.py  cleanup_stale_chunks.py  compute_doc_vectors.py  compute_epistemics.py  conventions.toml  curate_concepts.py  debug_metadata.py  debug_tables.py  dedupe_documents.py  describe_figures.py  detect_keyword_families.py  diagnose_crowding.py  doc_assistant_api.spec  download_corpus.py  enrich_metadata.py  eval_marker_tables.py  export_bibtex.py  extract_citations.py  extract_doc_metadata.py  extract_figures.py  extract_keywords.py  extract_tables.py  extract_tables_marker.py  find_duplicates.py  launch_app.cmd  launch_app.ps1  measure_latency.py  migrate_chroma_to_sqlite.py  migrate_to_content_hash.py  (+15 more)
scripts/archive/: migrate_chroma_to_sqlite.py  migrate_to_content_hash.py
src/doc_assistant/: CLAUDE.md  app_settings.py  bibtex.py  chat_controller.py  citations.py  commands.py  compare.py  concept_curation.py  concept_graph.py  concept_graph_view.py  config.py  (+36 more)
src/doc_assistant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_extractors.py  test_pipeline_helpers.py
(+245 files in other folders)
