[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-assistant"
version = "0.2.0"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ldele"}
]
keywords = ["rag", "llm", "document-search", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-classic>=1.0,<2.0",
    "langchain-community>=0.4,<1.0",
    "langchain-text-splitters>=1.0,<2.0",
    "langchain-chroma>=1.0,<2.0",
    "langchain-huggingface>=1.0,<2.0",
    "langchain-anthropic>=1.0,<2.0",
    "langchain-ollama>=1.0,<2.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.24",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-docx>=1.0",
    "rank_bm25>=0.2.2",
    "striprtf>=0.0.26",
    "odfpy>=1.4.1",
    "chainlit>=2.0,<3.0",
    "tqdm>=4.66",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "bandit>=1.7.9",
    "pip-audit>=2.7.0",
    "detect-secrets>=1.5.0",
    "pre-commit>=3.8.0",
    "structlog>=24.0.0",
]

[project.scripts]
doc-cli = "apps.cli:main"
doc-ingest = "doc_assistant.ingest:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "api: tests that call external APIs (Anthropic, etc.) — costs money, run with -m api",
]
filterwarnings = [
    "ignore::DeprecationWarning:chromadb.*",
]

# --- Ruff ---
[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["doc_assistant"]

# --- mypy ---
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = []

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_core.*",
    "langchain_classic.*",
    "langchain_community.*",
    "langchain_text_splitters.*",
    "langchain_chroma.*",
    "langchain_huggingface.*",
    "langchain_anthropic.*",
    "langchain_ollama.*",
    "chromadb.*",
    "sentence_transformers.*",
    "pymupdf4llm.*",
    "pymupdf.*",
    "fitz.*",
    "marker.*",
    "ebooklib.*",
    "bs4.*",
    "docx.*",
    "rank_bm25.*",
    "striprtf.*",
    "odf.*",
    "chainlit.*",
    "tqdm.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

# --- Bandit ---
[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests"]
skips = []
