[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-assistant"
version = "0.2.0"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ldele"}
]
keywords = ["rag", "llm", "document-search", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-classic>=1.0,<2.0",
    "langchain-community>=0.4,<1.0",
    "langchain-text-splitters>=1.0,<2.0",
    "langchain-chroma>=1.0,<2.0",
    "langchain-huggingface>=1.0,<2.0",
    "langchain-anthropic>=1.0,<2.0",
    "langchain-ollama>=1.0,<2.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    # torch is NOT a base dep — it's declared in the mutually-exclusive `cpu`/`cu130`
    # extras below (each bound to its PyTorch index in [tool.uv.sources]). Pick one per
    # machine: `uv sync --extra cu130` (GPU) or `uv sync --extra cpu` (CPU/CI). See
    # docs/specs/torch-backend-per-machine.md. sentence-transformers still needs torch
    # transitively; the chosen extra selects which wheel variant installs.
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.24",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-docx>=1.0",
    "rank_bm25>=0.2.2",
    "striprtf>=0.0.26",
    "odfpy>=1.4.1",
    "chainlit>=2.0,<3.0",
    "tqdm>=4.66",
    "sqlalchemy>=2.0",
    "duckdb>=1.5.3",
    "pdfplumber>=0.11.9",
    # Feature 7 concept graph: in-memory graph + Louvain community detection
    # (networkx>=3.0 ships louvain_communities). Pure-Python — no compiled
    # extensions, unlike igraph/leidenalg/graspologic (flaky Windows wheels). See
    # docs/decisions.md → Feature 7 ADR (Louvain-over-Leiden for v1).
    "networkx>=3.2",
    # Desktop API (PR-M2, ADR-002): FastAPI over 127.0.0.1 + SSE token streaming. Bundled
    # as a PyInstaller sidecar in PR-M4, so they live in the base deps (not an extra). No
    # torch interaction. `sse-starlette` gives EventSourceResponse (heartbeat + clean
    # client-disconnect); `uvicorn[standard]` is the dev/sidecar ASGI server.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "bandit>=1.7.9",
    "pip-audit>=2.7.0",
    "detect-secrets>=1.5.0",
    "pre-commit>=3.8.0",
    "structlog>=24.0.0",
]

# PyTorch backend variants — mutually exclusive (see [tool.uv] conflicts). Pick
# exactly ONE per machine at sync time:
#   GPU box (RTX, CUDA):  uv sync --extra cu130
#   CPU-only box + CI:    uv sync --extra cpu    <- safe default; the +cu130 wheel
#                                                   SEGFAULTS (exit 139) on a box with
#                                                   no usable GPU.
cpu = ["torch>=2.12"]
cu130 = ["torch>=2.12"]

[project.scripts]
doc-cli = "apps.cli:main"
doc-ingest = "doc_assistant.ingest:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# "." puts the repo root on sys.path so tests can import the thin shells under apps/
# (apps/ is not an installed package — see [tool.setuptools.packages.find] where=["src"]).
pythonpath = ["src", "."]
markers = [
    "api: tests that call external APIs (Anthropic, etc.) — costs money, run with -m api",
]
filterwarnings = [
    "ignore::DeprecationWarning:chromadb.*",
]

# --- Ruff ---
[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
line-length = 99
# Retained one-time migration scripts, kept for reference only — not maintained,
# not run. CI lints src/ + tests/ only; excluding here keeps `ruff check .` clean too.
extend-exclude = ["scripts/archive"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# audit_metadata prints a "starting" line before its slow langchain imports on
# purpose (feedback before the multi-second import cost). Allow the early import.
"scripts/audit_metadata.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["doc_assistant"]

# --- mypy ---
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
plugins = []

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_core.*",
    "langchain_classic.*",
    "langchain_community.*",
    "langchain_text_splitters.*",
    "langchain_chroma.*",
    "langchain_huggingface.*",
    "langchain_anthropic.*",
    "langchain_ollama.*",
    "chromadb.*",
    "sentence_transformers.*",
    "pymupdf4llm.*",
    "pymupdf.*",
    "pdfplumber.*",
    "fitz.*",
    "ebooklib.*",
    "bs4.*",
    "docx.*",
    "rank_bm25.*",
    "striprtf.*",
    "odf.*",
    "chainlit.*",
    "tqdm.*",
    "sqlalchemy.*",
    "networkx.*",
]
ignore_missing_imports = true

# --- uv: per-machine PyTorch backend via conflicting extras --------------
# torch-backend / UV_TORCH_BACKEND is uv-pip-only (a no-op for lock/sync/run), so a
# single committed lock can't auto-pick CUDA vs CPU, and two same-OS (win32) boxes
# can't be split by any PEP 508 marker. Instead: the `cpu`/`cu130` extras (above)
# each bind torch to an explicit PyTorch index; one shared uv.lock carries BOTH
# wheels and the `--extra` flag selects which installs per machine. `conflicts`
# makes enabling both error out (guards the CPU-box-never-cu130 invariant).
# Full rationale: docs/specs/torch-backend-per-machine.md.
[tool.uv]
conflicts = [
    [{ extra = "cpu" }, { extra = "cu130" }],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true        # only torch* resolves here; everything else stays on PyPI

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]
